tests/ui/traits/issue-91949-hangs-on-recursion.stderr
warning: function cannot return without recursing
  --> $DIR/issue-91949-hangs-on-recursion.rs:20:1
   |
LL | / fn recurse<T>(elements: T) -> Vec<char>
LL | |
LL | | where
LL | |     T: Iterator<Item = ()>,
   | |___________________________^ cannot return without recursing
LL |   {
LL |       recurse(IteratorOfWrapped(elements).map(|t| t.0))
   |       ------------------------------------------------- recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: reached the recursion limit while instantiating `recurse::<Map<IteratorOfWrapped<(), Map<..., ...>>, ...>>`
  --> $DIR/issue-91949-hangs-on-recursion.rs:25:5
   |
LL |     recurse(IteratorOfWrapped(elements).map(|t| t.0))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `recurse` defined here
  --> $DIR/issue-91949-hangs-on-recursion.rs:20:1
   |
LL | / fn recurse<T>(elements: T) -> Vec<char>
LL | |
LL | | where
LL | |     T: Iterator<Item = ()>,
   | |___________________________^
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/issue-91949-hangs-on-recursion.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error; 1 warning emitted

